5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1793_3137.log
== TEST (2019-05-30 18:26:01) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor": )))
		

-- ERROR:
File "XXXX", line 2
    v=array(eval(input(float("digite o vetor": )))
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:26:10) 
-- CODE:
from numpy import *
v=aray(eval(input(float("digite o vetor": )))
		

-- ERROR:
File "XXXX", line 2
    v=aray(eval(input(float("digite o vetor": )))
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:31:17) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor": )),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 2
    v=array(eval(input(float("digite o vetor": )),dtype=float)
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:31:18) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor": )),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 2
    v=array(eval(input(float("digite o vetor": )),dtype=float)
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:32:12) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:32:13) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:10) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
	while(i<size(v)):
		m=m*(v[i])
		i=i+1
	M=m**(1/n)
	print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:22) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
	while(i<size(v)):
		m=m*(v[i])
		i=i+1
	M=m**(1/n)
	print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:46) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
	while(i<size(v)):
		m=m*(v[i])
		i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:48) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
		m=m*(v[i])
		i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:49) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
		m=m*(v[i])
		i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:51) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
		m=m*(v[i])
		i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:54) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
		i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:57) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:58) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:34:32) 
-- CODE:
from numpy import *
v=array(eval(input(float("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 3
    n=size(v)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:35:18) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:35:32) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- EXECUTION TIME:
0.491689
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
1.36
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
1.0
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
0.55
---- user output:
2.72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:36:11) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:36:52) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m**(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:37:10) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m**(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- EXECUTION TIME:
0.443753
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
1.36
---- user output:
1.0
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
0.55
---- user output:
1.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:37:24) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:37:36) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:37:38) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- EXECUTION TIME:
0.722691
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
1.36
---- user output:
4.44
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
1.0
---- user output:
3.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
0.55
---- user output:
2.72
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:38:59) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
	M=m**(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:40:19) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:41:06) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m++(v[i])
	i=i+1
M=m++(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:43:53) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i)
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 7
    m=m*v[i)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:43:54) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*v[i)
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 7
    m=m*v[i)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:22) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i)
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 7
    m=m*(v[i)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:23) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i)
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 7
    m=m*(v[i)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:31) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m*(v[i])
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:45:11) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m+(v[i])
	i=i+1
M=m**(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:45:36) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m+(v[i])
	i=i+1
M=m+(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:46:39) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m+(v[i])
	i=i+1
	M*n(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:46:59) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m+(v[i])
	i=i+1
M*n(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:27) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
while(i<size(v)):
	m=m+(v[i])
	i=i+1
M*m(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:47:47) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
M=0
while(i<size(v)):
	m=m+(v[i])
	i=i+1
M*m(1/n)
print(round(M,2))


		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:49:25) 
-- CODE:
from numpy import *
v=array(eval(input("digite o vetor: ")),dtype=float)
n=size(v)
i=0
m=1
M=[0,1,2,n-1]
while(i<size(v)):
	m=m+(v[i])
	i=i+1
   M+m(1/n)
print(round(M,2))


		

-- ERROR:
File "XXXX", line 10
    M+m(1/n)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
